Live coding session 13 - Vicálvaro

--- a/PF-3/exercises/ProblemSet5.ipynb
+++ b/PF-3/exercises/ProblemSet5.ipynb
@@ -12,9 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -954,9 +967,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mEmpty\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mNode\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// type Tree[A] = 1 + Tree[A] * A * Tree[A]\n",
     "\n",
@@ -974,9 +1000,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mobject\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36mTree._\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "object Tree{\n",
     "    \n",
@@ -1015,9 +1053,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldTree\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def foldTree[A, B](tree: Tree[A])(empty: B)(node: (B, A, B) => B): B = \n",
     "    ???"
@@ -1144,9 +1193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestIsDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestIsDegenerate(\n",
     "    isDegenerate: Tree[Int] => Boolean\n",
@@ -1167,12 +1227,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
-    "    ???"
+    "    tree match {\n",
+    "        case Empty() =>\n",
+    "            true : Boolean \n",
+    "        case Node(left, root, right) => \n",
+    "            val isDegL: Boolean = isDegenerate(left)\n",
+    "            val isDegR: Boolean = isDegenerate(right)\n",
+    "            (left, right) match {\n",
+    "                case (Empty(), Empty()) => true\n",
+    "                case (_, Empty()) => isDegL\n",
+    "                case (Empty(), _) => isDegR\n",
+    "                case _ => false\n",
+    "            }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
+    "    foldTree(tree)(\n",
+    "        ??? : (Tree[A], Boolean)){\n",
+    "            case ((left, isDegL), root, (right, isDegR)) => \n",
+    "                (Node(left, root, right), \n",
+    "                 (left, right) match {\n",
+    "                    case (Empty(), Empty()) => true\n",
+    "                    case (_, Empty()) => isDegL\n",
+    "                    case (Empty(), _) => isDegR\n",
+    "                    case _ => false\n",
+    "                })\n",
+    "    }._2\n",
+    "/*\n",
+    "    tree match {\n",
+    "        case Empty() =>\n",
+    "            true : Boolean \n",
+    "        case Node(left, root, right) => \n",
+    "            val isDegL: Boolean = isDegenerate(left)\n",
+    "            val isDegR: Boolean = isDegenerate(right)\n",
+    "            (left, right) match {\n",
+    "                case (Empty(), Empty()) => true\n",
+    "                case (_, Empty()) => isDegL\n",
+    "                case (Empty(), _) => isDegR\n",
+    "                case _ => false\n",
+    "            }\n",
+    "    }*/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
+    "    foldTree(tree)(\n",
+    "        ??? : (Tree[A], Boolean)){\n",
+    "            case ((Empty(), isDegL), root, (Empty(), isDegR)) => \n",
+    "                (Node(left, root, right), true)\n",
+    "            case _ => /* TBD */\n",
+    "    }._2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
+    "    foldTree(tree)(\n",
+    "         (true, true): (Boolean, Boolean)){\n",
+    "            case (true, isDegL), root, (true, isDegR)) => \n",
+    "                (false, true)\n",
+    "            case _ => /* TBD */\n",
+    "    }._2\n"
    ]
   },
   {
