--- a/exams/Examen19-20-P2-Julio.ipynb
+++ b/exams/Examen19-20-P2-Julio.ipynb
@@ -19,9 +19,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.pom.sha1\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.pom\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.pom\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.pom.sha1\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.pom.sha1\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.pom\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.pom.sha1\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.pom\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8-sources.jar.sha1\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8-sources.jar\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.jar\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.jar.sha1\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.jar\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.jar.sha1\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8-sources.jar.sha1\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8-sources.jar\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.jar.sha1\n",
+      "Downloading https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8-sources.jar.sha1\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.jar.sha1\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8.jar\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalactic/scalactic_2.11/3.0.8/scalactic_2.11-3.0.8-sources.jar\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8-sources.jar.sha1\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8-sources.jar\n",
+      "Downloaded https://repo1.maven.org/maven2/org/scalatest/scalatest_2.11/3.0.8/scalatest_2.11-3.0.8.jar\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -1114,9 +1157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestFindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestFindIndex(\n",
     "    findIndex: (Int => Boolean) => List[Int] => Option[Int]\n",
@@ -1143,18 +1197,246 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findIndex[A](pred: A => Boolean)(l: List[A]): Option[A] = {\n",
+    "    def auxFind(out: Option[A], \n",
+    "                aux: List[A]): Option[A] = \n",
+    "        aux match {\n",
+    "            case Nil => out \n",
+    "            case head :: tail => \n",
+    "                if (pred(head)) Some(head) \n",
+    "                else auxFind(out, tail) \n",
+    "        }\n",
+    "    \n",
+    "    auxFind(None, l)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findIndex[A](pred: A => Boolean)(l: List[A]): Option[A] = {\n",
+    "    def auxFind(out: Option[A], \n",
+    "                aux: List[A]): Option[A] = \n",
+    "        aux match {\n",
+    "            case Nil => out \n",
+    "            case head :: tail if pred(head) => \n",
+    "                Some(head) \n",
+    "            case _ :: tail => \n",
+    "                auxFind(out, tail) \n",
+    "        }\n",
+    "    \n",
+    "    auxFind(None, l)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findIndex[A](pred: A => Boolean)(l: List[A]): Option[Int] = {\n",
+    "    def auxFind(out: Int, \n",
+    "                aux: List[A]): Option[Int] = \n",
+    "        aux match {\n",
+    "            case Nil => None\n",
+    "            case head :: tail if pred(head) => \n",
+    "                Some(out) \n",
+    "            case _ :: tail => \n",
+    "                auxFind(out+1, tail) \n",
+    "        }\n",
+    "    \n",
+    "    auxFind(0, l)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findIndex[A](pred: A => Boolean)(l: List[A]): Option[Int] =\n",
+    "    l.foldLeft(\n",
+    "        (None, 0) : (Option[Int], Int))(\n",
+    "        (out: (Option[Int], Int), e: A) => \n",
+    "            if (out._1 == None && pred(e)) \n",
+    "                (Some(out._2), out._2 : Int)\n",
+    "            else \n",
+    "                (out._1 : Option[Int], out._2 + 1 : Int)\n",
+    "    )._1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findIndex[A](pred: A => Boolean)(l: List[A]): Option[Int] =\n",
+    "    l.foldLeft(\n",
+    "        (None, 0) : (Option[Int], Int))(\n",
+    "        (out: (Option[Int], Int), e: A) =>\n",
+    "            (out, e) match {\n",
+    "                case ((None, idx), e) if pred(e) =>  \n",
+    "                    (Some(idx), idx)\n",
+    "                case ((out1, idx), e) => \n",
+    "                    (out1, idx + 1 : Int)\n",
+    "            }\n",
+    "    )._1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findIndex[A](pred: A => Boolean)(l: List[A]): Option[Int] =\n",
+    "    l.foldLeft(\n",
+    "        (None, 0) : (Option[Int], Int))(\n",
+    "        {\n",
+    "            case ((None, idx), e) if pred(e) =>  \n",
+    "                (Some(idx), idx)\n",
+    "            case ((out1, idx), e) => \n",
+    "                (out1, idx + 1 : Int)\n",
+    "        }\n",
+    "    )._1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findIndex4[A](pred: A => Boolean)(l: List[A]): Option[Int] = {\n",
-    "    def aux(i: Int): List[A] => Option[Int] = {\n",
-    "        case Nil => None\n",
-    "        case head :: tail if pred(head) => Some(i)\n",
-    "        case head :: tail => aux(i+1)(tail)\n",
+    "/*def findIndex4[A](pred: A => Boolean)(l: List[A]): Option[Int] =\n",
+    "    l.foldLeft(None: Option[Int]){ \n",
+    "        (acc: Option[Int], elem: A) =>\n",
+    "                if (pred(head)){\n",
+    "                    Some(elem)\n",
+    "                } else {\n",
+    "                    acc+1\n",
+    "                }\n",
     "    }\n",
-    "    aux(0)(l)\n",
-    "}"
+    "*/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldLeft\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldLeft[A, B](l: List[A])(\n",
+    "    initial: B)(\n",
+    "    update: (B, A) => B): B = ??? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres20_0\u001b[39m: \u001b[32mOption\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mSome\u001b[39m(\u001b[32m4\u001b[39m)\n",
+       "\u001b[36mres20_1\u001b[39m: \u001b[32mOption\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mSome\u001b[39m(\u001b[32m1\u001b[39m)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findIndex[Int](_ > 4)(List(1,2,3,4,5))\n",
+    "findIndex[Int](_ % 2 == 0)(List(1,2,3,4,5))"
    ]
   },
   {
@@ -1375,9 +1657,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestFindIndex\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestFindIndex(\n",
     "    findIndex: (Int => Boolean) => List[Int] => Option[Int]\n",
@@ -1651,17 +1944,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala",
+   "display_name": "Scala 2.11",
    "language": "scala",
-   "name": "scala"
+   "name": "scala211"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".sc",
+   "file_extension": ".scala",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.3"
+   "version": "2.11.12"
   }
  },
  "nbformat": 4,
