--- a/exams/Examen20-21-Ordinaria.ipynb
+++ b/exams/Examen20-21-Ordinaria.ipynb
@@ -19,9 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -856,9 +869,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestLookup\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestLookup(\n",
     "    lookup: List[(Int, String)] => Int => Option[String]\n",
@@ -884,22 +908,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldLeft\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def lookup[A, B](list: List[(A, B)])(a: A): Option[B] =\n",
-    "    foldLeftUntil(list)(Option.empty[B])(_.isDefined){\n",
-    "        case (_, (`a`, b)) => Some(b) \n",
-    "        case (acc, _) => acc \n",
-    "    }"
+    "def foldLeft[A, B](list: List[A])(initial: B)(update: (B, A) => B): B = {\n",
+    "    var out: B = initial\n",
+    "    for (e <- list)\n",
+    "        out = update(out, e)\n",
+    "    out\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlookup\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lookup[A, B](list: List[(A, B)])(a: A): Option[B] =\n",
+    "    list.foldLeft(\n",
+    "        None : Option[B])(\n",
+    "        (out: Option[B], e: (A, B)) => \n",
+    "            if (e._1 == a && out == None) Some(e._2) : Option[B]\n",
+    "            else out\n",
+    "    )\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlookup\u001b[39m"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lookup[A, B](list: List[(A, B)])(a: A): Option[B] =\n",
+    "    list.foldLeft(\n",
+    "        None : Option[B])(\n",
+    "        {\n",
+    "            //case (None, (`a`, v)) =>\n",
+    "            case (None, (k, v)) if k == a => \n",
+    "                Some(v)\n",
+    "            case (out, _) => \n",
+    "                out\n",
+    "        }\n",
+    "    )\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres17\u001b[39m: \u001b[32mOption\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mSome\u001b[39m(\u001b[32m1\u001b[39m)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lookup(List((1,1), (1,3), (2,2), (3, 3)))(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "(if (true) 1 else (??? : Nothing)): Unit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd11$Helper$TestLookup:\u001b[0m\n",
+      "\u001b[32mlookup\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestLookup(lookup))"
    ]
@@ -976,7 +1109,7 @@
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.3"
+   "version": "2.13.1"
   }
  },
  "nbformat": 4,
