Live coding session 12 - Móstoles

--- a/PF-3/exercises/ProblemSet5.ipynb
+++ b/PF-3/exercises/ProblemSet5.ipynb
@@ -12,9 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -954,9 +967,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mEmpty\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mNode\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// type Tree[A] = 1 + Tree[A] * A * Tree[A]\n",
     "\n",
@@ -974,9 +1000,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mobject\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36mTree._\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "object Tree{\n",
     "    \n",
@@ -1015,12 +1053,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldTree\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def foldTree[A, B](tree: Tree[A])(empty: B)(node: (B, A, B) => B): B = \n",
-    "    ???"
+    "    tree match {\n",
+    "        case Empty() => empty\n",
+    "        case Node(left, root, right) => \n",
+    "            node(foldTree(left)(empty)(node), root, \n",
+    "                 foldTree(right)(empty)(node))\n",
+    "    }"
    ]
   },
   {
@@ -1144,9 +1198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestIsDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestIsDegenerate(\n",
     "    isDegenerate: Tree[Int] => Boolean\n",
@@ -1167,19 +1232,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
-    "    ???"
+    "    foldTree(tree)(\n",
+    "        (true, true) : (Boolean, Boolean)){\n",
+    "        case ((isDegL, isLeftEmpty), _, (isDegR, isRightEmpty)) => \n",
+    "            (if (isLeftEmpty && isRightEmpty) true\n",
+    "             else if (!isLeftEmpty && !isRightEmpty) false \n",
+    "             else if (isLeftEmpty) isDegR \n",
+    "             else isDegL,\n",
+    "             false)\n",
+    "    }._1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
+    "    foldTree(tree)(\n",
+    "        (true, true) : (Boolean, Boolean)){\n",
+    "        case ((isDegL, false), _, (isDegR, true)) => (isDegL, false)\n",
+    "        case ((isDegL, true), _, (isDegR, false)) => (isDegR, false)\n",
+    "        case ((_, isEmptyL), _, (_, isEmptyR)) => \n",
+    "            (isEmptyL && isEmptyR, false)\n",
+    "    }._1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            true : Boolean\n",
+    "        case Node(left, root, right) =>\n",
+    "            val isDegL: Boolean = isDegenerate(left)\n",
+    "            val isDegR: Boolean = isDegenerate(right)\n",
+    "            if (left == Empty() && right == Empty()) true\n",
+    "            else if (left != Empty() && right != Empty()) false \n",
+    "            else if (left == Empty()) isDegR \n",
+    "            else isDegL\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misDegenerate\u001b[39m"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isDegenerate[A](tree: Tree[A]): Boolean = \n",
+    "    tree match {\n",
+    "        case Empty() => \n",
+    "            true : Boolean\n",
+    "        case Node(Empty(), _, right: Node[A]) => \n",
+    "            isDegenerate(right)\n",
+    "        case Node(left: Node[A], _, Empty()) => \n",
+    "            isDegenerate(left)\n",
+    "        case Node(left, _, right) =>\n",
+    "            left == Empty() && right == Empty()\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd4$Helper$TestIsDegenerate:\u001b[0m\n",
+      "\u001b[32misDegenerate\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestIsDegenerate(isDegenerate))"
    ]
