--- a/exams/Examen19-20-P1-Dic.ipynb
+++ b/exams/Examen19-20-P1-Dic.ipynb
@@ -19,9 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -581,9 +594,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestInsertAt\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestInsertAt(\n",
     "    insertAt: (Char, Int, List[Char]) => List[Char]\n",
@@ -636,19 +660,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mindexOf\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def insertAt[A](a: A, n: Int, list: List[A]): List[A] = {\n",
-    "    val (out, length) = list.foldLeft((List[A](), 0)){\n",
-    "        case ((out, l), e) if l+1 == n => \n",
-    "            (e :: a :: out, l+1)\n",
-    "        case ((out, l), e) => \n",
-    "            (e :: out, l+1)\n",
-    "    }\n",
-    "    (if (length < n) a :: out else out).reverse\n",
-    "}"
+    "def indexOf[A](list: List[A], a: A): Int = ???\n"
    ]
   },
   {
@@ -656,6 +683,186 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "indexOf(List(1,1,1,1,1,1), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36minsertAt\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def insertAt[A](a: A, n: Int, list: List[A]): List[A] = {\n",
+    "    var out: List[A] = List()\n",
+    "    var idx: Int = 1\n",
+    "    for (e <- list){\n",
+    "        if (idx == n)\n",
+    "            out = e :: a :: out\n",
+    "        else \n",
+    "            out = e :: out\n",
+    "        idx += 1\n",
+    "    }\n",
+    "    if (n >= idx) out = a :: out\n",
+    "    out.reverse\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd14$Helper$TestInsertAt:\u001b[0m\n",
+      "\u001b[32minsertAt\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "run(new TestInsertAt(insertAt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres9\u001b[39m: \u001b[32mBoolean\u001b[39m = true"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insertAt(1, 3, List(1,2,3,4)) == List(1,2,1,3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mobject\u001b[39m \u001b[36mStd\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "object Std{\n",
+    "    class List[A]{\n",
+    "        def foldLeft[B](initial: B)(update: (B, A) => B): B = \n",
+    "            ???\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36minsertAt\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def insertAt[A](a: A, n: Int, list: List[A]): List[A] = {\n",
+    "    val acc: (List[A], Int) = \n",
+    "        list.foldLeft[(List[A], Int)](\n",
+    "            (List() : List[A], 1 : Int))(\n",
+    "            (acc: (List[A], Int), e: A) => \n",
+    "                (if (acc._2 == n) e :: a :: acc._1\n",
+    "                 else e :: acc._1,\n",
+    "                 acc._2 + 1) : (List[A], Int)\n",
+    "        )\n",
+    "    val outU: List[A] = \n",
+    "        if (n >= acc._2) a :: acc._1\n",
+    "        else acc._1\n",
+    "    outU.reverse\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36minsertAt\u001b[39m"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def insertAt[A](a: A, n: Int, list: List[A]): List[A] = {\n",
+    "    val (out, idx) =  \n",
+    "        list.foldLeft[(List[A], Int)](\n",
+    "            (List(), 1)){\n",
+    "                case ((out, idx), e) if idx == n => \n",
+    "                    (e :: a :: out, idx + 1)\n",
+    "                case ((out, idx), e) =>\n",
+    "                    (e :: out, idx + 1)\n",
+    "            }\n",
+    " \n",
+    "    (if (n >= idx) a :: out\n",
+    "     else out).reverse\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd14$Helper$TestInsertAt:\u001b[0m\n",
+      "\u001b[32minsertAt\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestInsertAt(insertAt))"
    ]
@@ -800,11 +1007,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.0"
+   "version": "2.13.1"
   }
  },
  "nbformat": 4,
